<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="no_premission_header">Please allow app to read the device\'s data. It is necessary for playing videos</string>
    <string name="file_name">File name:</string>
    <string name="added">Added:</string>
    <string name="duration">Duration:</string>

    <string name="title_activity_player">PlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="playlist_saved">PLaylist saved</string>
    <string name="action_saved_playlists">Saved playlists</string>
    <string name="allow">Allow</string>
    <string name="empty">No videos found</string>
    <string name="load_playlist">Load playlist</string>
    <string name="no_playlists_found">No playlists found</string>
    <string name="choose_playlist">Choose playlist:</string>
    <string name="scan_for_new_movies">Scan for new movies</string>
    <string name="playlist_name">playlist name</string>
    <string name="save">Save</string>
    <string name="save_this_playlist">Save this playlist</string>
    <string name="cancel">Cancel</string>
    <string name="empty_name">Please fill in a name</string>
</resources>
