<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pantos27.videoplayer.MainActivity"
    tools:showIn="@layout/activity_main">
    <TextView
        android:id="@+id/main_header"
        android:text="@string/no_premission_header"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="22dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/main_empty"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/empty"
        android:textSize="27sp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <Button
            android:onClick="scanForNewMedia"
            android:text="@string/scan_for_new_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/main_button_allow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow"
        android:onClick="onAllowClick"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_header" />
    <ListView
        android:id="@+id/main_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
</android.support.constraint.ConstraintLayout>
